Add `rev/activity`, closes #3
